# src/modules/tenants/dto/test-platform-tenant-connection.dto.ts
@@ -1,0 +1,6 @@
+import { IsString } from 'class-validator';
+
+export class TestPlatformTenantConnectionDto {
+  @IsString()
+  dbConnectionUrl!: string;
+}
